// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Default 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <div
          className="bx--tooltip--definition bx--tooltip--a11y"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-describedby="definition-tooltip-2"
            className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            onFocus={[Function]}
            type="button"
          >
            Last 30 minutes
          </button>
          <div
            className="bx--assistive-text"
            id="definition-tooltip-2"
            role="tooltip"
          >
            2018-10-28 07:04 to Now
          </div>
        </div>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Icon only 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "3rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Light version 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full iot--date-time-picker__box--light"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <div
          className="bx--tooltip--definition bx--tooltip--a11y"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-describedby="definition-tooltip-10"
            className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            onFocus={[Function]}
            type="button"
          >
            Last 30 minutes
          </button>
          <div
            className="bx--assistive-text"
            id="definition-tooltip-10"
            role="tooltip"
          >
            2018-10-28 07:04 to Now
          </div>
        </div>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom iot--flyout-menu__light"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Locale 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker25-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <span
          title="01/04/2020 12:34 to 06/04/2020 10:49"
        >
          01/04/2020 12:34 to 06/04/2020 10:49
        </span>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Selected absolute 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <span
          title="2020-04-01 12:34 to 2020-04-06 10:49"
        >
          2020-04-01 12:34 to 2020-04-06 10:49
        </span>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Selected preset 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <div
          className="bx--tooltip--definition bx--tooltip--a11y"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-describedby="definition-tooltip-4"
            className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            onFocus={[Function]}
            type="button"
          >
            Last 12 hours
          </button>
          <div
            className="bx--assistive-text"
            id="definition-tooltip-4"
            role="tooltip"
          >
            2018-10-27 19:34 to Now
          </div>
        </div>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Selected relative 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <span
          title="2018-10-28 13:10 to 2018-10-28 13:30"
        >
          2018-10-28 13:10 to 2018-10-28 13:30
        </span>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Without a custom range link 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <div
          className="bx--tooltip--definition bx--tooltip--a11y"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-describedby="definition-tooltip-8"
            className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            onFocus={[Function]}
            type="button"
          >
            Last 12 hours
          </button>
          <div
            className="bx--assistive-text"
            id="definition-tooltip-8"
            role="tooltip"
          >
            2018-10-27 19:34 to Now
          </div>
        </div>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/DateTimePicker Without a relative option 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--date-time-picker__wrapper"
    data-testid="date-time-picker"
    id="datetimepicker-iot--date-time-picker__wrapper"
    style={
      Object {
        "--wrapper-width": "20rem",
      }
    }
  >
    <div
      className="iot--date-time-picker__box--full"
    >
      <div
        className="iot--date-time-picker__field"
        data-testid="date-time-picker__field"
      >
        <div
          className="bx--tooltip--definition bx--tooltip--a11y"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-describedby="definition-tooltip-6"
            className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            onFocus={[Function]}
            type="button"
          >
            Last 12 hours
          </button>
          <div
            className="bx--assistive-text"
            id="definition-tooltip-6"
            role="tooltip"
          >
            2018-10-27 19:34 to Now
          </div>
        </div>
      </div>
      <div
        className="iot--flyout-menu iot--flyout-menu__bottom"
        style={
          Object {
            "--tooltip-visibility": "hidden",
          }
        }
      >
        <button
          aria-label="Helpful description"
          className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"
          data-testid="flyout-menu-button"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="bx--assistive-text"
          >
            Helpful description
          </span>
          <svg
            aria-hidden="true"
            aria-label="Helpful description"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </button>
        <div
          className="iot--flyout-menu--tooltip-anchor"
          data-floating-menu-container={true}
        >
          <div
            aria-describedby={null}
            aria-expanded={false}
            aria-label="Helpful description"
            className="bx--tooltip__label"
            id="test-trigger-id-2"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
